falla de responsive en home

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 <div class="our-latest">
   <div class="container">
     <div class="row">
-      <div class="col-md-3">
+      <div class="col-md-3  col-sm-12 col-xs-12">
         <h2>Our Latest Proyect</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat modi labore assumenda dolore nemo nisi ve</p>
         <nav>
@@ -189,7 +189,7 @@
         </nav>
       </div>
 
-      <div class="col-md-3">
+      <div class="col-md-3  col-sm-3 col-xs-4">
         <div class="thumbnail">
           <img src="images/portfolio/recent/item1.png" alt=""> 
           <div class="caption">
@@ -198,7 +198,7 @@
         </div>
       </div>
       
-      <div class="col-md-3">
+      <div class="col-md-3  col-sm-3 col-xs-4">
         <div class="thumbnail">
           <img src="images/portfolio/recent/item3.png" alt=""> 
           <div class="caption">
@@ -207,7 +207,7 @@
         </div>
       </div>
 
-      <div class="col-md-3">
+      <div class="col-md-3  col-sm-3 col-xs-4">
         <div class="thumbnail">
           <img src="images/portfolio/recent/item2.png" alt=""> 
           <div class="caption">
@@ -225,11 +225,11 @@
     <div class="row">
       <h2>What our clients say</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam dolorem dolore adipisci non earum culpa et</p>
-      <div class="col-md-6">
+      <div class="col-md-6  col-sm-6 col-xs-12">
         <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta atque id tempora.</h4>
         <h6> - Someome famous in source title</h6>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-6  col-sm-6 col-xs-12">
         <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta atque id tempora.</h4>
         <h6> - Someome famous in source title</h6>
       </div>
@@ -239,11 +239,11 @@
 <div class="our-clients">
   <div class="container">
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-6 col-sm-6 col-xs-12">
         <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta atque id tempora.</h4>
         <h6> - Someome famous in source title</h6>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-6  col-sm-6 col-xs-12 ">
         <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta atque id tempora.</h4>
         <h6> - Someome famous in source title</h6>
       </div>
@@ -255,7 +255,7 @@
 <div class="about">
   <div class="container">
     <div class="row">
-      <div class="col-md-3">
+      <div class="col-md-3 col-sm-6 col-xs-12">
         <h3>About Us</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid voluptates a sit architecto est accusamus, itaque blanditiis dolorem temporibus nihil facere ex asperiores magni ab iusto reiciendis inventore, nisi ad.</p>
       </div>
@@ -368,7 +368,7 @@
 <footer>
   <div class="container">
     <div class="row vertical-centered-text ">
-      <div class="col-md-6">
+      <div class="col-md-6 ">
         <p>© 2013 ShapeBootstrap.All Rights Reserved</p>
       </div>
       <div class="col-md-6 footer-nav">
