--- a/contact-us.html
+++ b/contact-us.html
@@ -82,7 +82,7 @@
         <div class="form-contact">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-sm-4 col-xs-4">
                         <h4>Contact Form</h4>
                         <form>
                           <div class="form-group">
