responsive contact-services

--- a/services.html
+++ b/services.html
@@ -197,12 +197,12 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
             tempor incididunt ut labore et dolore magna aliqua. </p>
         </div>
-        <div class="row linea">
-            <div class="col-md-6">
+        <div class="row ">
+            <div class="col-md-6 col-sm-6 col-xs-12 linea">
                 <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta atque id tempora.</h4>
                 <h6> - Someome famous in source title</h6>
             </div>
-            <div class="col-md-6 linea">
+            <div class="col-md-6 col-sm-6 col-xs-12 linea">
                 <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta atque id tempora.</h4>
                 <h6> - Someome famous in source title</h6>
             </div>
