--- a/portfolio.html
+++ b/portfolio.html
@@ -82,7 +82,7 @@
     <div class="trabajos">
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-4 col-xs-4">
                     <div class="thumbnail">
                         <img src="images/portfolio/full/item3.jpg" alt=""> 
                         <div class="caption">
@@ -90,7 +90,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4  col-sm-4 col-xs-4">
                     <div class="thumbnail">
                         <img src="images/portfolio/full/item2.jpg" alt=""> 
                         <div class="caption">
@@ -99,7 +99,7 @@
                     </div>
 
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-4 col-xs-4">
                     <div class="thumbnail">
                         <img src="images/portfolio/full/item3.jpg" alt=""> 
                         <div class="caption">
@@ -115,7 +115,7 @@
     <div class="trabajos">
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-4  col-sm-4 col-xs-4">
                     <div class="thumbnail">
                         <img src="images/portfolio/full/item4.jpg" alt=""> 
                         <div class="caption">
@@ -123,7 +123,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4  col-sm-4 col-xs-4">
                     <div class="thumbnail">
                         <img src="images/portfolio/full/item5.jpg" alt=""> 
                         <div class="caption">
@@ -132,7 +132,7 @@
                     </div>
 
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-4 col-xs-4">
                     <div class="thumbnail">
                         <img src="images/portfolio/full/item6.jpg" alt=""> 
                         <div class="caption">
