--- a/index.html
+++ b/index.html
@@ -114,50 +114,49 @@
     <div class="red-social">
       <div class="container">
         <div class="row">
-          <div class="col-md-4">
+          <div class="col-md-4 col-sm-4 col-xs-12">
             <div class="row">
-              <div class="col-md-3">
-               <ul class="list-inline">
-                <li>
-                  <a href="#" class="btn-social btn-outline"><i class="fa fa-twitter"></i></a>
-                </li>           
-              </ul>
+              <div class="col-md-3 col-sm-3 col-xs-3">
+               <a href="">
+                        <div class="box fb">
+                            <i class="fa fa-twitter"></i>
+                        </div>
+                    </a>
             </div>
-            <div class="col-md-9">
+            <div class="col-md-9 col-sm-9 col-xs-9">
               <h2>Twitter Marketing</h2>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque aut ad consequuntur eaque, nemo quidem dolor dicta! Possimus temporibus sequi ab iusto, dignissimos quas sunt laborum, ex natus, architecto laudantium!</p>
             </div>  
           </div>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-4 col-sm-4 col-xs-12">
           <div class="row">
-            <div class="col-md-3">
-              <ul class="list-inline">
-                <li>
-                  <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
-                </li>
-                
-              </ul>
+            <div class="col-md-3 col-sm-3 col-xs-3">
+              <a href="">
+                        <div class="box fb">
+                            <i class="fa fa-facebook"></i>
+                        </div>
+                    </a>
             </div>
-            <div class="col-md-9">
-              <h2>Twitter Marketing</h2>
+            <div class="col-md-9 col-sm-9 col-xs-9">
+              <h2>Facebook Marketing</h2>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque aut ad consequuntur eaque, nemo quidem dolor dicta! Possimus temporibus sequi ab iusto, dignissimos quas sunt laborum, ex natus, architecto laudantium!</p>
             </div>  
           </div>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-4 col-sm-4 col-xs-12">
           <div class="row">
-            <div class="col-md-3">
-             <ul class="list-inline">
-              <li>
-                <a href="#" class="btn-social btn-outline"><i class="fa fa-google-plus"></i></a>
-              </li>           
-            </ul>
+            <div class="col-md-3 col-sm-3 col-xs-3">
+           <a href="">
+                        <div class="box fb">
+                            <i class="fa fa-google-plus"></i>
+                        </div>
+                    </a>
           </div>
-          <div class="col-md-9">
-            <h2>Twitter Marketing</h2>
+          <div class="col-md-9 col-sm-3 col-xs-9">
+            <h2>Google Plus Marketing</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque aut ad consequuntur eaque, nemo quidem dolor dicta! Possimus temporibus sequi ab iusto, dignissimos quas sunt laborum, ex natus, architecto laudantium!</p>
           </div>  
         </div>
