flecha del footer

--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
       <div class="col-md-6 ">
         <p>© 2013 ShapeBootstrap.All Rights Reserved</p>
       </div>
-      <div class="col-md-6 footer-nav">
+      <div class="col-md-5  col-xs-5 footer-nav">
         <ul class="nav navbar-nav navbar-right">
           <li>
             <a class="page-scroll" href="#about">Home</a>
@@ -383,10 +383,12 @@
           </li>
         </ul>
       </div>
+      <div class="col-md-1 col-xs-1">
+        <a href=""><i class="fa fa-angle-up"></i></a>
+      </div>
     </div>
   </div>
 </footer>
-
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
