arreglo de footer en todas las apginas internas

--- a/blog.html
+++ b/blog.html
@@ -312,26 +312,29 @@
 </div>
 
 <footer>
-    <div class="container">
-        <div class="row vertical-centered-text ">
-            <div class="col-md-6 col-xs-12">
-                <p>© 2013 ShapeBootstrap.All Rights Reserved</p>
-            </div>
-            <div class="col-md-6 col-xs-12 footer-nav">
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a class="page-scroll" href="index.html">Home</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="about-us.html">About Us</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="contact.html">Contact Us</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
+  <div class="container">
+    <div class="row vertical-centered-text ">
+      <div class="col-md-6 ">
+        <p>© 2013 ShapeBootstrap.All Rights Reserved</p>
+      </div>
+      <div class="col-md-5  col-xs-5 footer-nav">
+        <ul class="nav navbar-nav navbar-right">
+          <li>
+            <a class="page-scroll" href="#about">Home</a>
+          </li>
+          <li>
+            <a class="page-scroll" href="#services">About Us</a>
+          </li>
+          <li>
+            <a class="page-scroll" href="#portfolio">Contact Us</a>
+          </li>
+        </ul>
+      </div>
+      <div class="col-md-1 col-xs-1">
+        <a href=""><i class="fa fa-angle-up"></i></a>
+      </div>
     </div>
+  </div>
 </footer>
 
 <script src="js/jquery.js"></script>
