--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
                     </a>
             </div>
             <div class="col-md-9 col-sm-9 col-xs-9">
-              <h2>Twitter Marketing</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque aut ad consequuntur eaque, nemo quidem dolor dicta! Possimus temporibus sequi ab iusto, dignissimos quas sunt laborum, ex natus, architecto laudantium!</p>
+              <h3>Twitter Marketing</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque aut ad consequuntur eaque, nemo quidem dolor dict!</p>
             </div>  
           </div>
         </div>
@@ -140,8 +140,8 @@
                     </a>
             </div>
             <div class="col-md-9 col-sm-9 col-xs-9">
-              <h2>Facebook Marketing</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque aut ad consequuntur eaque, nemo quidem dolor dicta! Possimus temporibus sequi ab iusto, dignissimos quas sunt laborum, ex natus, architecto laudantium!</p>
+              <h3>Facebook Marketing</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque aut ad consequuntur eaque, nemo quidem dolor dicta! Pos!</p>
             </div>  
           </div>
         </div>
@@ -156,8 +156,8 @@
                     </a>
           </div>
           <div class="col-md-9 col-sm-3 col-xs-9">
-            <h2>Google Plus Marketing</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque aut ad consequuntur eaque, nemo quidem dolor dicta! Possimus temporibus sequi ab iusto, dignissimos quas sunt laborum, ex natus, architecto laudantium!</p>
+            <h3>Google Plus Marketing</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque aut ad consequuntur eaque, nemo quidem dolor dicta! Pos!</p>
           </div>  
         </div>
       </div>
