Footer responsive, redes index responsive, font size responsive

--- a/blog.html
+++ b/blog.html
@@ -313,12 +313,12 @@
 
 <footer>
   <div class="container">
-    <div class="row vertical-centered-text ">
-      <div class="col-md-6 ">
+    <div class="row">
+      <div class="col-md-6 col-xs-12 pt-15">
         <p>© 2013 ShapeBootstrap.All Rights Reserved</p>
       </div>
-      <div class="col-md-5  col-xs-5 footer-nav">
-        <ul class="nav navbar-nav navbar-right">
+      <div class="col-md-5  col-xs-12 footer-nav">
+        <ul class="nav navbar-nav navbar-right text-right">
           <li>
             <a class="page-scroll" href="#about">Home</a>
           </li>
@@ -328,11 +328,9 @@
           <li>
             <a class="page-scroll" href="#portfolio">Contact Us</a>
           </li>
+          <a href="#carousel-example-generic"><i class="fa fa-angle-up pt-15"></i></a>
         </ul>
-      </div>
-      <div class="col-md-1 col-xs-1">
-        <a href=""><i class="fa fa-angle-up"></i></a>
-      </div>
+      </div>      
     </div>
   </div>
 </footer>
