--- a/contact-us.html
+++ b/contact-us.html
@@ -169,39 +169,39 @@
         </a>
     </div>
 
-    <div class="col-md-3">
+    <div class="col-md-3 col-xs-12">
         <h3>Latest Blog</h3>
         <div class="row foto">
-            <div class="col-md-4">
+            <div class="col-md-4 col-xs-3">
                 <a href="#">
-                    <img class="media-objet" src="images/blog/thumb1.jpg">
+                    <img class="media-objet img-full" src="images/blog/thumb1.jpg">
                 </a>  
             </div>
-            <div class="col-md-8">
+            <div class="col-md-8 col-xs-9">
                 <h5>Lorem ipsum dolor sit amet, consectetu.</h5> 
                 <h6>Posted 17 Aug 2013</h6>
             </div>
         </div>
 
         <div class="row foto">
-            <div class="col-md-4">
+            <div class="col-md-4 col-xs-3">
                 <a href="#">
-                    <img class="media-objet" src="images/blog/thumb2.jpg">
+                    <img class="media-objet img-full" src="images/blog/thumb2.jpg">
                 </a>  
             </div>
-            <div class="col-md-8">
+            <div class="col-md-8 col-xs-9">
                 <h5>Lorem ipsum dolor sit amet, consectetu.</h5> 
                 <h6>Posted 13 Sep 2013</h6>
             </div>
         </div>
 
         <div class="row foto">
-            <div class="col-md-4">
+            <div class="col-md-4 col-xs-3">
                 <a href="#">
-                    <img class="media-objet" src="images/blog/thumb3.jpg">
+                    <img class="media-objet img-full" src="images/blog/thumb3.jpg">
                 </a>  
             </div>
-            <div class="col-md-8">
+            <div class="col-md-8 col-xs-9">
                 <h5>Lorem ipsum dolor sit amet, consectetu.</h5> 
                 <h6>Posted 11 Jul 2013</h6>
             </div>
@@ -210,9 +210,9 @@
 
     <div class="col-md-3">
         <h3>Address</h3>
-        <br>
-        <h5>Twitter, Inc</h5>
+        <h5><strong>Twitter, Inc</strong></h5>
         <p>795 Folsom Ave, Suite 600 San Francisco CA 941077</p>
+        <p>P: (123) 456-7890</p>
         <div class="go">
             <h3>Newsletter</h3>
             <div class="input-group">
@@ -229,12 +229,12 @@
 
 <footer>
   <div class="container">
-    <div class="row vertical-centered-text ">
-      <div class="col-md-6 ">
+    <div class="row">
+      <div class="col-md-6 col-xs-12 pt-15">
         <p>© 2013 ShapeBootstrap.All Rights Reserved</p>
       </div>
-      <div class="col-md-5  col-xs-5 footer-nav">
-        <ul class="nav navbar-nav navbar-right">
+      <div class="col-md-5  col-xs-12 footer-nav">
+        <ul class="nav navbar-nav navbar-right text-right">
           <li>
             <a class="page-scroll" href="#about">Home</a>
           </li>
@@ -244,11 +244,9 @@
           <li>
             <a class="page-scroll" href="#portfolio">Contact Us</a>
           </li>
+          <a href="#carousel-example-generic"><i class="fa fa-angle-up pt-15"></i></a>
         </ul>
-      </div>
-      <div class="col-md-1 col-xs-1">
-        <a href=""><i class="fa fa-angle-up"></i></a>
-      </div>
+      </div>      
     </div>
   </div>
 </footer>
