texto en imagenes index

--- a/services.html
+++ b/services.html
@@ -67,13 +67,12 @@
 <section class="cabecera-verde">
     <div class="container">
         <div class="row vertical-centered-text">
-            <div class="col-sm-8">
+            <div class="col-sm-7">
                 <h2>Services</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do.</p>
                 </div>
-                <div class="col-sm-4 text-right">
-                    <a href="index.html"><strong>Home</strong></a> | Services
+                <div class="col-sm-5 text-right">
+                    <a href="index.html"><strong>Home</strong></a>|Services
                 </div>
             </div>
         </div>
