--- a/index.html
+++ b/index.html
@@ -192,7 +192,8 @@
         <div class="thumbnail">
           <img src="images/portfolio/recent/item1.png" alt=""> 
           <div class="caption">
-            <h5>Nova- corporate site template</h5>
+            <h5 class="hidden-xs">Nova- corporate site template</h5>
+            <h5 class="visible-xs">Nova- corpor...</h5>
           </div>
         </div>
       </div>
@@ -201,7 +202,8 @@
         <div class="thumbnail">
           <img src="images/portfolio/recent/item3.png" alt=""> 
           <div class="caption">
-            <h5>Nova- corporate site template</h5>
+            <h5 class="hidden-xs">Nova- corporate site template</h5>
+            <h5 class="visible-xs">Nova- corpor...</h5>
           </div>
         </div>
       </div>
@@ -210,7 +212,8 @@
         <div class="thumbnail">
           <img src="images/portfolio/recent/item2.png" alt=""> 
           <div class="caption">
-            <h5>Nova- corporate site template</h5>
+            <h5 class="hidden-xs">Nova- corporate site template</h5>
+            <h5 class="visible-xs">Nova- corpor...</h5>
           </div>
         </div>
       </div>
