--- a/blog-item2.html
+++ b/blog-item2.html
@@ -63,7 +63,7 @@
             </div>
         </div>
     </nav>  
-    <section class="cabecera-verde">
+    <section id="cabecera-verde" class="cabecera-verde">
         <div class="container">
             <div class="row vertical-centered-text">
                 <div class="col-xs-8">
@@ -387,9 +387,11 @@
           <li>
             <a class="page-scroll" href="#portfolio">Contact Us</a>
           </li>
-          <a href="#carousel-example-generic"><i class="fa fa-angle-up pt-15"></i></a>
         </ul>
-      </div>      
+      </div>    
+      <div class="col-md-1">
+          <a href="#cabecera-verde"><i class="fa fa-angle-up pt-15"></i></a>
+      </div>   
     </div>
   </div>
 </footer>
