--- a/index.html
+++ b/index.html
@@ -384,9 +384,11 @@
           <li>
             <a class="page-scroll" href="#portfolio">Contact Us</a>
           </li>
-          <a href="#carousel-example-generic"><i class="fa fa-angle-up pt-15"></i></a>
-        </ul>
-      </div>      
+          </ul>
+          </div>
+          <div class="col-md-1">
+            <a href="#carousel-example-generic"><i class="fa fa-angle-up pt-15"></i></a>
+          </div>      
     </div>
   </div>
 </footer>
