--- a/blog-item2.html
+++ b/blog-item2.html
@@ -387,11 +387,9 @@
           <li>
             <a class="page-scroll" href="#portfolio">Contact Us</a>
           </li>
+          <a href="#carousel-example-generic"><i class="fa fa-angle-up pt-15"></i></a>
         </ul>
       </div>    
-      <div class="col-md-1">
-          <a href="#cabecera-verde"><i class="fa fa-angle-up pt-15"></i></a>
-      </div>   
     </div>
   </div>
 </footer>
