--- a/about-us.html
+++ b/about-us.html
@@ -359,9 +359,9 @@
             <a class="page-scroll" href="#services">About Us</a>
           </li>
           <li>
-            <a class="page-scroll" href="#portfolio">Contact Us</a>
+            <a class="page-scroll" href="#portfolio">Cosntact Us</a>
           </li>
-          <a href="#carousel-example-generic"><i class="fa fa-angle-up pt-15"></i></a>
+          <a href="#cabecera-verde"><i class="fa fa-angle-up pt-15"></i></a>
         </ul>
       </div>      
     </div>
